# twitter-showcase

./: README.md  SCRATCH.md
client/: .gitignore  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js
client/src/components/: Description.js  Footer.js  Header.js  Profile.js  ProfileHeader.js  RandomButton.js  SearchBar.js  Tweet.js  TweetFooter.js  TweetHeader.js  TweetMedia.js  TweetText.js  TwitterLogo.js  index.js
client/src/pages/: Home.js  NotFound.js  Random.js  Search.js  index.js
client/src/styles/: App.css  Description.css  HeaderFooter.css  Home.css  NotFound.css  Pages.css  Profile.css  ProfileHeader.css  Random.css  RandomButton.css  Search.css  SearchBar.css  Tweet.css  TwitterLogo.css  index.css
client/src/utils/: getMediaUrls.js  parseLinks.js
server/: .gitignore  SERVER.md  app.py  pyproject.toml  requirements.txt  server.py
