[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["et-codes <104942211+et-codes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "9.0.1"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
flask = "2.2.2"
flask-cors = "3.0.10"
flask-restful = "0.3.9"
gunicorn = "20.1.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
python-dotenv = "0.21.0"
pytz = "2022.2.1"
requests = "2.28.1"
six = "1.16.0"
urllib3 = "1.26.12"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
